# kshell

./: CMakeLists.txt  README.md
KShell/kshell/: __init__.py  kshell_ui.py
snt/: ysox.snt
src/: Makefile  kshell.F90  lanczos.f90  lib_matrix.F90  operator_mscheme.f90  transit.F90
test/: cr48.sh
